--- a/media.css
+++ b/media.css
@@ -25,7 +25,7 @@ height:70px;
 }
 .one4
 {
-background:url('C:/yashu/microsoft/images/m2 (1).png')no-repeat;
+background:url('./images/m2 (1).png')no-repeat;
 background-size:100%;
 float:left;
 
@@ -115,7 +115,7 @@ float:left;
 
 width:100%;
 height:510px;
-background:url('C:/yashu/microsoft/images/dtgb.webp')no-repeat;
+background:url('./images/dtgb.webp')no-repeat;
 background-size:contain;
 background-position:center;
 }
